--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -41,9 +41,9 @@
 .form_bg {
   border: 1px solid #f3f5f6;
   border-radius: 3px;
-  padding: 1rem;
+  padding: 2rem 1rem;
   box-shadow: 0px 1px 2px #0000000d;
-  height: 20rem;
+  height: auto;
   width: 30rem;
 }
 
